#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Honkinator], [3000], [<darkfm@vera.com.uy>],[honk3000])
AC_CANONICAL_TARGET
AC_CONFIG_SRCDIR([appfuncs.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_LANG(C++)
AC_PROG_CXX

# Checks for libraries.
unset fltkconfig
AC_CHECK_PROGS([fltkconfig],[fltk-config])

if test "x$fltkconfig" = x; then
	AC_MSG_ERROR([fltk-config not found])
fi

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])
AC_CHECK_HEADERS([unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strdup])

AC_OUTPUT(Makefile)
